--- a/pom.xml
+++ b/pom.xml
@@ -61,4 +61,10 @@
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+        <repository>
+            <id>nexus-releases</id> <!-- Match this ID with the settings.xml -->
+            <url>http://13.60.76.30:8081/repository/maven-package/</url>
+        </repository>
+</distributionManagement>
 </project>
